--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,19 +28,20 @@ h1 {
 }
 
 h2 {
-    font-size: 25px;
-    border-bottom: 1px solid white;
-    padding-bottom: 3px;
+    text-align: center;
+    font-size: 44px;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    text-shadow: #666362 3px 2px 0px;
+    padding-top: 20px;
+    padding-bottom: 32px;
 }
 
-h3 {
-    font-size: 22px;
-}
 
 p {
-    font-size: 24px;
-    line-height: 28px;
-    margin-bottom: 15px;
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 20px;
 }
 
 /*anchor styles*/
@@ -143,7 +144,18 @@ footer p {
 }
 
 .bottomimg {
-    width: 50%;
     width: 980px;
     margin-top: 20px;
+}
+
+.rb1img {
+    width: 48%;
+    margin-left: 10px;
+}
+
+
+.rb2img {
+    width: 50%;
+    float: right;
+    margin-top: 15px;
 }
