--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,8 +75,6 @@ header {
 }
 
 nav {
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
     text-align: center;
 }
 
@@ -92,8 +90,7 @@ nav ul li {
 
 nav ul li a {
     color: white;
-    background-color: #4c4646;
-    ;
+    background-color: #343434;
     text-decoration: none;
     padding: 10px 15px;
     letter-spacing: 2px;
