--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,14 @@ h2 {
     padding-bottom: 32px;
 }
 
+h3 {
+    text-align: left;
+    font-size: 36px;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    padding-top: 20px;
+}
+
 
 p {
     font-size: 28px;
@@ -117,6 +125,23 @@ main {
     overflow: auto;
 }
 
+main ul {
+    list-style-type: square;
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+main ol {
+    list-style-type: decimal;
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+main li {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
 footer {
     background-color: #343434;
     padding: 10px;
@@ -155,4 +180,64 @@ footer p {
     width: 50%;
     float: right;
     margin-top: 15px;
+}
+
+/* Media query for phones */
+@media screen and (max-device-width: 400px) {
+    .wrapper {
+        width: 98%;
+    }
+
+
+    /*    change the image width on a mobile*/
+    img {
+        max-width: 100%;
+    }
+
+    .left-image-box p {
+        font-size: 2.2em;
+    }
+}
+
+/* target devices larger than 400px and less than 768px */
+@media screen and (min-device-width: 400px) and (max-device-width: 768px) {
+
+    /* typography */
+    h2 {
+        font-size: 2.389em;
+    }
+
+    h3 {
+        font-size: 2.278em;
+    }
+
+    .wrapper {
+        width: 95%;
+    }
+
+    img {
+        max-width: 80%;
+    }
+
+    .left-image-box p {
+        font-size: 2.2em;
+    }
+
+}
+
+@media screen and (min-device-width: 768px) {
+    h1 {
+        text-align: center;
+        display: block;
+    }
+
+    nav {
+        float: none;
+        display: block;
+    }
+
+    nav ul {
+        text-align: center
+    }
+
 }
